Fix neon PWA manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,20 @@
 {
-  "name": "Aventure Mathématique",
+  "name": "Aventure Math",
   "short_name": "Math",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#6366f1",
-  "orientation": "portrait",
+  "background_color": "#050816",
+  "theme_color": "#8B5CF6",
   "icons": [
-    { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
